feat: adding documentation for API
