# api/api.go
@@ -4,9 +4,11 @@ import (
 	"fmt"
 	"log"
 
+	"github.com/gofiber/contrib/swagger"
 	"github.com/gofiber/fiber/v2"
 	"github.com/rulanugrh/megaclite/api/endpoint"
 	"github.com/rulanugrh/megaclite/config"
+	"github.com/rulanugrh/megaclite/internal/middleware"
 )
 
 type APIInterface interface {
@@ -14,20 +16,32 @@ type APIInterface interface {
 }
 
 type Api struct {
-	app  *fiber.App
-	conf *config.App
+	app        *fiber.App
+	conf       *config.App
+	middleware middleware.CommonMiddlewareInterface
 }
 
-func NewAPIRoutes(conf *config.App) APIInterface {
+func NewAPIRoutes(conf *config.App, middleware middleware.CommonMiddlewareInterface) APIInterface {
 	return &Api{
 		app: fiber.New(fiber.Config{
 			AppName: "API Webmail Megaclite with Golang and Mysql",
 		}),
-		conf: conf,
+		conf:       conf,
+		middleware: middleware,
 	}
 }
 
 func (a *Api) Run(user endpoint.UserInterface, labeling endpoint.LabelingInterface, mail endpoint.MailInterface, category endpoint.CategoryInterface) {
+	swgconf := swagger.Config{
+		BasePath: "/",
+		FilePath: "./docs/swagger.json",
+		Path:     "docs",
+		Title:    "Megaclite API Docs",
+	}
+
+	// Use documentation swagger
+	a.app.Use(swagger.New(swgconf))
+
 	// Routing API for Mail
 	mailRoutes := a.app.Group("/api/mail")
 	mailRoutes.Post("/", mail.Create)
@@ -37,19 +51,19 @@ func (a *Api) Run(user endpoint.UserInterface, labeling endpoint.LabelingInterfa
 	mailRoutes.Delete("/delete/:id", mail.GetByID)
 
 	// Routing API for User
-	userRoutes := a.app.Group("/api/user")
+	userRoutes := a.app.Group("/api/user", a.middleware.APIMiddleware)
 	userRoutes.Post("/register", user.Register)
 	userRoutes.Post("/login", user.Login)
 	userRoutes.Get("/:email", user.Get)
 
 	// Routing API For Category
-	categoryRoutes := a.app.Group("/api/category")
+	categoryRoutes := a.app.Group("/api/category", a.middleware.APIMiddleware)
 	categoryRoutes.Post("/", category.Create)
 	categoryRoutes.Delete("/:id", category.Delete)
 	categoryRoutes.Put("/:id", category.Update)
 
 	// Routing API For Labeling
-	labelingRoutes := a.app.Group("/api/labeling")
+	labelingRoutes := a.app.Group("/api/labeling", a.middleware.APIMiddleware)
 	labelingRoutes.Post("/", labeling.Create)
 	labelingRoutes.Get("/:categoryID/:user_id", labeling.FindByCategory)
 	labelingRoutes.Put("/update/:id/:categoryID", labeling.UpdateLabel)
